samples/_failures_safe/1761791387_8a833c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0ff0db53.c: In function ‘main’:
./samples/SAFE/__tmp_0ff0db53.c:162:25: error: missing terminating " character
  162 |         fprintf(stderr, "Invalid input
      |                         ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_0ff0db53.c:162:9: error: expected expression at end of input
  162 |         fprintf(stderr, "Invalid input
      |         ^~~~~~~
./samples/SAFE/__tmp_0ff0db53.c:162:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0ff0db53.c:162:9: error: expected declaration or statement at end of input
